2008-01-12  Sven Herzberg  <herzi@gnome-de.org>

	Prepare the game window for the maemo port.

	* src/ui/ui-main.c: modify the code to work for GNOME and for Maemo
	without changing the glade file

2008-01-12  Sven Herzberg  <herzi@gnome-de.org>

	Add the right dependencies for the Maemo port. Based on the Maemo port
	of Monkey-Bubble which was created by Jouni Roivas.

	* configure.in: finish dependency tracking for the two builds

2008-01-12  Sven Herzberg  <herzi@gnome-de.org>

	Fix dist to include every necessary file.

	* data/Makefile.am: always define dbus_in_files to get the files
	included even when calling 'make dist' in a gnome-configured build

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Get the file ready for merging the maemo build system

	* debian/control.in: added Jouni to the Maintainers

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Be able to specify different sections for Debian/Ubuntu and Maemo

	* debian/control,
	* debian/control.in: renamed the file and replaced the section by
	@SECTION@
	* debian/rules: added a rule to create the debian/control file from
	the template (this will also allow better dependency specification)
	* Makefile.am: updated the package build rule

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Add a make rule for debian packages. Based on the Maemo port of
	Monkey-Bubble which was created by Jouni Roivas.

	* Makefile.am: added a rule to build the debian package easily

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Repair the .deb build system

	* debian/control: fix the file to get monkey-bubble built again

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Dropped the old xpm and use the one from the debian folder now. This
	makes the tarball a little smaller and will result in less effort for
	debian packaging.

	* debian/monkey-bubble.xpm: moved into pixmaps
	* debian/rules: don't install the xpm file anymore, it's done
	automatically now