@@ -117,9 +117,23 @@ UiNetworkClient *ui_network_client_new() {
 
         PRIVATE(ngl)->ready = FALSE;
 
+#ifdef GNOME
         PRIVATE(ngl)->glade_xml = glade_xml_new(DATADIR"/monkey-bubble/glade/netgame.glade","network_window",NULL);
         
         PRIVATE(ngl)->window = glade_xml_get_widget( PRIVATE(ngl)->glade_xml, "network_window");
+	gtk_widget_hide (glade_xml_get_widget (PRIVATE(ngl)->glade_xml, "close_button"));
+#endif
+#ifdef MAEMO
+	PRIVATE(ngl)->glade_xml = glade_xml_new(DATADIR"/monkey-bubble/glade/netgame.glade","vbox1",NULL);
+
+	PRIVATE(ngl)->window = gtk_dialog_new();
+	gtk_window_set_title(GTK_WINDOW(PRIVATE(ngl)->window), _("Network game"));
+	container = glade_xml_get_widget( PRIVATE(ngl)->glade_xml, "vbox1");
+	gtk_container_add(GTK_CONTAINER(GTK_DIALOG(PRIVATE(ngl)->window)->vbox), container);
+	item = glade_xml_get_widget( PRIVATE(ngl)->glade_xml, "close_button");
+	g_signal_connect_swapped( item,"clicked",GTK_SIGNAL_FUNC(close_signal),ngl);
+	gtk_widget_set_size_request (glade_xml_get_widget (PRIVATE(ngl)->glade_xml, "scrolledwindow2"), -1, 298); // FIXME: check if necessary
+#endif
 
        
         item = glade_xml_get_widget( PRIVATE(ngl)->glade_xml, "go_button");
